- inserting readme file; - inserting game logic.

--- a/RopascilizSpock/app/src/main/res/values/colors.xml
+++ b/RopascilizSpock/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorSuccess">#268c28</color>
+    <color name="colorDanger">#8c262d</color>
 </resources>
